--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SFv1.2</string>
+    <string name="title_activity_main_screen">MainScreen</string>
+    <string name="title_activity_main_screen_recycle">MainScreenRecycle</string>
 </resources>
